<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_main_rlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="bottom"
    android:layout_marginLeft="@dimen/view_space_10"
    android:layout_marginRight="@dimen/view_space_10"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_space_10"
        android:layout_marginLeft="@dimen/view_space_10"
        android:layout_marginEnd="@dimen/view_space_10"
        android:layout_marginRight="@dimen/view_space_10"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_10"
        custom:cardCornerRadius="@dimen/view_space_10">

        <LinearLayout
            android:id="@+id/ll_dialog_cg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.commonlib.customviews.CustomTextView
                android:id="@+id/ctv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:hint="@string/label_options"
                android:padding="@dimen/view_space_10"
                android:textSize="@dimen/text_16"
                tools:ignore="UnusedAttribute" />

            <View
                android:id="@+id/devider_view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@color/line_color"
                android:visibility="visible" />

            <com.commonlib.customviews.CustomTextView
                android:id="@+id/ctv_option_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_space_50"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/view_space_10"
                android:text="@string/label_choose_from_library"
                android:textSize="@dimen/text_16"
                custom:ctvTxtColor="@color/appThemeColor" />

            <View
                android:id="@+id/devider_view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@color/line_color"
                android:visibility="visible" />

            <com.commonlib.customviews.CustomTextView
                android:id="@+id/ctv_option_two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_space_50"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/view_space_10"
                android:text="@string/label_take_photo"
                android:textSize="@dimen/text_16"
                android:visibility="visible"
                custom:ctvTxtColor="@color/appThemeColor" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_tv_dialog_cg_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_space_50"
        android:layout_marginStart="@dimen/view_space_10"
        android:layout_marginLeft="@dimen/view_space_10"
        android:layout_marginTop="@dimen/view_space_5"
        android:layout_marginEnd="@dimen/view_space_10"
        android:layout_marginRight="@dimen/view_space_10"
        android:layout_marginBottom="@dimen/view_space_5"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_10"
        custom:cardCornerRadius="@dimen/view_space_10">

        <com.commonlib.customviews.CustomTextView
            android:id="@+id/ctv_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:padding="@dimen/view_space_10"
            android:text="@string/label_cancel"
            android:textSize="@dimen/text_16"
            custom:ctvTxtColor="@color/appThemeColor"
            custom:txtTypeface="REGULAR"
            tools:ignore="UnusedAttribute" />

    </androidx.cardview.widget.CardView>

</LinearLayout>


