<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.commonlib.customviews.CustomTextView
            android:id="@+id/ctvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space_8"
            android:gravity="center_horizontal"
            android:padding="@dimen/view_space_8"
            android:textColor="@color/text_color_main"
            android:textSize="@dimen/text_18sp"
            app:ctvTxtColor="@color/text_color_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:txtTypeface="BOLD"
            tools:text="Alert" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/view_space_8"
            android:background="@color/color_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctvTitle"/>

        <com.commonlib.customviews.CustomTextView
            android:id="@+id/ctvContentMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space_10"
            android:gravity="center"
            android:paddingStart="@dimen/view_space_8"
            android:paddingLeft="@dimen/view_space_8"
            android:paddingTop="@dimen/view_space_24"
            android:paddingEnd="@dimen/view_space_8"
            android:paddingRight="@dimen/view_space_8"
            android:paddingBottom="@dimen/view_space_24"
            android:text="@string/msg_alert_are_you_sure_remove_bookmark"
            android:textColor="@color/gray_dark_color"
            android:textSize="@dimen/text_16"
            app:ctvTxtColor="@color/gray_dark_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDivider"
            app:txtTypeface="REGULAR" />

        <EditText
            android:id="@+id/etInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space_24"
            android:gravity="center"
            android:inputType="text"
            android:paddingBottom="@dimen/view_space_24"
            android:textColor="@color/gray_dark_color"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

        <View
            android:id="@+id/viewDividerContent"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/view_space_10"
            android:background="@color/color_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctvContentMsg"/>

        <com.commonlib.customviews.CustomBtn
            android:id="@+id/btnLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/view_space_18"
            android:paddingBottom="@dimen/view_space_18"
            android:text="@string/label_cancel"
            android:textSize="@dimen/alert_btn_txt_size"
            app:btnTextColor="@color/text_color_main"
            app:btnTypeface="BOLD"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/viewDividerBtns"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerContent" />

        <View
            android:id="@+id/viewDividerBtns"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/color_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btnLeft"
            app:layout_constraintRight_toLeftOf="@+id/btnRight"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerContent">

        </View>

        <com.commonlib.customviews.CustomBtn
            android:id="@+id/btnRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/view_space_18"
            android:paddingBottom="@dimen/view_space_18"
            android:text="@string/label_ok"
            android:textSize="@dimen/alert_btn_txt_size"
            app:btnTextColor="@color/text_color_main"
            app:btnTypeface="BOLD"
            app:layout_constraintLeft_toRightOf="@+id/viewDividerBtns"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>